# WhatsappMathBot

./: .gitignore  .replit  README.md  ai_handler.js  conversations.db  index.js  package-lock.json  package.json  pdf_processor.py  pyproject.toml  server.js  styles.css  summarize.py  test_summarize.py
attached_assets/: Pasted--level-30-time-2025-03-06T01-39-53-419Z-pid-6621-hostname-2f743e4d96ae-class-baileys--1741225409935.txt  Pasted-Fase-1-Mejorar-el-N-cleo-del-Bot-Chat-y-Respuestas-de-IA-Optimizaci-n-de-Respuestas-de-IA-In-1741227072972.txt  conversations.db  index.html  index.js  package.json  script.js  server.js  styles.css  summarize.py
baileys_auth/: app-state-sync-key-AAAAAA+v.json  app-state-sync-key-AAAAAA+w.json  app-state-sync-key-AAAAAA+x.json  app-state-sync-key-AAAAAA+y.json  app-state-sync-key-AAAAAA+z.json  app-state-sync-version-critical_block.json  app-state-sync-version-critical_unblock_low.json  app-state-sync-version-regular.json  app-state-sync-version-regular_high.json  app-state-sync-version-regular_low.json  creds.json  pre-key-1.json  pre-key-10.json  pre-key-11.json  pre-key-12.json  pre-key-13.json  pre-key-14.json  pre-key-15.json  pre-key-17.json  pre-key-18.json  pre-key-19.json  pre-key-2.json  pre-key-20.json  pre-key-21.json  pre-key-22.json  pre-key-23.json  pre-key-24.json  pre-key-25.json  pre-key-26.json  pre-key-27.json  pre-key-28.json  pre-key-29.json  pre-key-3.json  pre-key-30.json  pre-key-4.json  pre-key-5.json  pre-key-6.json  pre-key-7.json  pre-key-8.json  pre-key-9.json  (+3 more)
public/: index.html  script.js  styles.css
